fix: image too large

--- a/src/tailwind.global.css
+++ b/src/tailwind.global.css
@@ -27,7 +27,8 @@
 }
 
 .lightbox img{
-    max-width: 90%;
+    max-width: 90vw;
+    max-height: 100vh;
 }
 
 /* Close lightbox "x" icon */
